# APComp

./: .gitignore  APComp.jucer  APCompFlat.jucer  CMakeLists  CMakeLists.txt  LICENSE  Versatile Compressor.jucer
.github/workflows/: build.yml
Builds/LinuxMakefile/: Makefile
Builds/LinuxMakefile/pre_build/: juce_LinuxSubprocessHelperBinaryData.cpp  juce_LinuxSubprocessHelperBinaryData.h
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: APCommon.cpp  APCommon.h  CircularBuffer.h  Configuration.cpp  Constants.h  DSP.cpp  KnobLooks.cpp  KnobLooks.h  Parameters.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/original skin/: APComp.jucer  PluginProcessor.cpp  PluginProcessor.h
